# gm_autonews

./: .gitignore  Guide.md  README.md  Vision.md  pyproject.toml
logs/: 2024-10-08_17-17-55_edit_task.md  2024-10-08_17-17-55_newsletter_task.html  2024-10-08_17-17-55_research_task.md  2024-10-08_17-50-32_edit_task.md  2024-10-08_17-50-32_newsletter_task.html  2024-10-08_17-50-32_research_task.md  2024-10-08_17-54-59_research_task.md  2024-10-08_18-05-04_edit_task.md  2024-10-08_18-05-04_newsletter_task.html  2024-10-08_18-05-04_research_task.md  2024-10-08_18-20-13_research_task.md  2024-10-08_18-20-14_edit_task.md  2024-10-08_18-20-14_newsletter_task.html
src/auto_newsletter_gen/: crew.py  main.py
src/auto_newsletter_gen/config/: newsletter_template.html
src/auto_newsletter_gen/tools/: research.py
src/gui/: app.py
