[tool.poetry]
name = "auto_newsletter_gen"
version = "0.1.0"
description = "automatic news fetching and newsletter generation"
authors = ["Gal Moshkovitz <gal.moshko@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
streamlit = "^1.34.0"
crewai = {extras = ["tools"], version = "^0.28.7"}
exa-py = "^1.0.9"
langchain = "0.1.17"
langchain-core = "0.1.52"
langchain-anthropic = "^0.1.11"
langchain-groq = "^0.1.3"
langchain-google-genai = "^1.0.3"
pillow = "^10.3.0"

[tool.poetry.scripts]
auto_newsletter_gen = "auto_newsletter_gen.main:run"
auto_newsletter_gen_ui = "auto_newsletter_gen.gui.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

